feat: add 2-opt move with the original iterator